# rideboard-v2

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-00030e21560ce62548eabf89124a90e28fc6bf4651a85c7a52d6468c44e36852.json  query-02d82e80a5c3671c078ffb754a4c459308e15733ee9308a5d5761764e283ad2d.json  query-0646cde5b03e72f9139e8382f1a61cb8c5172afd6b6487bafbb9c3b468bda10b.json  query-083dadea7a5750d488d29a9aa60c35f5eaba3eceb280380900102865dd77aaef.json  query-0dcc7ef3ced8f280c164b673ef35cc6a813c06de7c8f93e257fbb361c457f7a4.json  query-145b9916731c4e402ce4a3b992caa8fa0f71fe7e5bb063e4a68fd7cc73fa8e6d.json  query-1c32092df89c5163785b7f002b721c7e480e82712d5a7a19516f254f14f04eb8.json  query-204d2ab2a60e1a4d752f86adaed4057499a938449cb04c417dc9aa98b4bcbc2e.json  query-240da8a772a1541d34bc85a89a6d8a1ddf08e06a3062401f6584aa86bdecb2ba.json  query-265aeab895a5d3ce441ebba42bd83c61c1a2147289e4b58d0c70680b83a30585.json  query-31b1a46117fd51573240ca9c41408fcc2aae985df11e2255538c15a099d2449a.json  query-347403ed249d8ec43bf21e6baf291191defc8174cdd8c8641b4de6ff61ec8a04.json  query-40901d716c75136d6fb2bf60c6dc19c67dd744ab3b8225005afe36ccb74bd491.json  query-47d04e0acd95c6675cd4d5415321ac476243289d42ccb2c6ba5c35b32bf63986.json  query-4c059cb53daab9c9a7df91204a7f95e8fdf74b318b2fcc5fbd7864e38ff27869.json  query-4c1b87f8528aa4940ab145c5463fcccd0777dffe2cc06a847ce7816b36803790.json  query-4e674fb9370edd9c1b50f774406e8bcb575747135c9adccb9a2e1ea881e14963.json  query-5027790ff6e3cd978eaec2c399b171e765515747a4052d0ad59c2fd64ec81251.json  (+32 more)
src/: app.rs  auth.rs  (+5 more)
(+66 files in other folders)
